base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all
  namespace: cryptoledger
spec:
  podSelector: {}
  ingress:
  - {}
  egress:
  - {}
